--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wiredep-gulp",
+  "name": "wiredep",
   "version": "1.0.0",
   "description": "wiredep use for gulp",
   "main": "gulpfile.js",
