--- a/bower.json
+++ b/bower.json
@@ -23,9 +23,9 @@
   "dependencies": {
     "angular": "~1.4.8",
     "requirejs": "~2.1.22",
-    "angular-route": "~1.4.8",
     "requirejs-domready": "~2.0.1",
     "jquery": "~2.1.4",
-    "bootstrap": "~3.3.6"
+    "bootstrap": "~3.3.6",
+    "angular-ui-router": "~0.2.15"
   }
 }
