--- a/package.json
+++ b/package.json
@@ -1,30 +1,30 @@
 {
-  "name": "angular-requirejs",
-  "version": "1.0.0",
-  "description": "angular requirejs ui-router http-server",
-  "main": "public/index.html",
-  "dependencies": {
-    "http-server": "^0.8.5"
-  },
-  "devDependencies": {},
-  "scripts": {
-    "start": "http-server -a localhost -p 9000 -c-l",
-    "prestart": "npm install & bower install"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+ssh://git@github.com/hualuomoli/learning.git"
-  },
-  "keywords": [
-    "angular",
-    "requirejs",
-    "ui-router",
-    "http-server"
-  ],
-  "author": "hualuomoli",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/hualuomoli/learning/issues"
-  },
-  "homepage": "https://github.com/hualuomoli/learning#readme"
+    "name": "angular-requirejs",
+    "version": "1.0.0",
+    "description": "angular requirejs ui-router http-server",
+    "main": "public/index.html",
+    "dependencies": {
+        "http-server": "^0.8.5"
+    },
+    "devDependencies": {},
+    "scripts": {
+        "start": "http-server -a localhost -p 9000 -o -c-l",
+        "prestart": "npm install & bower install"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+ssh://git@github.com/hualuomoli/learning.git"
+    },
+    "keywords": [
+        "angular",
+        "requirejs",
+        "ui-router",
+        "http-server"
+    ],
+    "author": "hualuomoli",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/hualuomoli/learning/issues"
+    },
+    "homepage": "https://github.com/hualuomoli/learning#readme"
 }
